<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_menu_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/main_screen_nav_menu_home"
        app:showAsAction="withText" />
    <item
        android:id="@+id/nav_menu_fav"
        android:icon="@drawable/ic_twotone_favorite"
        android:title="@string/main_screen_nav_menu_fav"
        app:showAsAction="withText" />
    <item
        android:id="@+id/nav_menu_later"
        android:icon="@drawable/ic_twotone_watch_later"
        android:title="@string/main_screen_nav_menu_later"
        app:showAsAction="withText" />
    <item
        android:id="@+id/nav_menu_collection"
        android:icon="@drawable/ic_twotone_selections"
        android:title="@string/main_screen_nav_menu_selections"
        app:showAsAction="withText" />
    <item
        android:id="@+id/nav_menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/main_screen_setting_menu_settings"
        app:showAsAction="withText" />
</menu>