<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/later_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.LaterFragment"
    android:background="@drawable/shape_later"
    android:visibility="invisible">
</FrameLayout>