<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/collection_fragment_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.CollectionFragment"
    android:background="@drawable/shape_collection"
    android:visibility="invisible"/>